alteraçoes no portfólio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./style.css">
+
     <title>Portfólio Web</title>
     
 </head>
@@ -14,13 +17,11 @@
 
     <h2>Iesley de Matos Ferreira</h2>
 
-    <a href="#sobre">Sobre mim</a><br>
-    <a href="#caracteristicas">Caracteristicas</a><br>
-    <a href="#blogs">Blogs</a><br>
+    <a href="#sobre">Sobre mim</a> <br>
+    <a href="#caracteristicas">Caracteristicas</a> <br>
+    <a href="#blogs">Blogs</a> <br>
 
     <div><img src="./imagens/Captura de tela de 2023-02-14 00-15-21.png" alt="" width="250px"></div>
-
-    <p>Este sou eu logo após comer um omelete e tomar um capuccino</p> <br>
 
     <h3>Um pouco sobre mim:</h3>
 
