adicinei rotação ao criador do site

--- a/index.html
+++ b/index.html
@@ -87,5 +87,16 @@
         </ol>
     </div>
 
+      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">  	
+        <div class="flipper">  		
+          <div class="front">  			
+              Feito por:		
+          </div>  		
+          <div class="back">  			
+              <a href="http://https://www.instagram.com/iesleyferreira/" target="_blank" rel="noopener noreferrer">Iesley Ferreira</a>  		
+          </div>  	
+        </div>  
+      </div>
+
   </body>
 </html>
